<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".activity_register"
        android:background="@drawable/background1">


        <LinearLayout
            style="@style/Layouts_Vertical"
            android:layout_weight="2">
            <ImageView
                android:id="@+id/imageRegister"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:src="@drawable/icon_trivialist"
                android:contentDescription="@string/image_logo"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/title_register"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_register" />

            <EditText
                android:id="@+id/emailRegister"
                style="@style/EditText_Standard"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordRegister"
                style="@style/EditText_Standard"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelRegister"
                style="@style/buttonCancel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmRegister"
                style="@style/buttonConfirm"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/confirm" />
        </LinearLayout>
    </LinearLayout>

</layout>
