<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical"
      tools:context=".LoginActivity"
      android:background="@drawable/background1">
    <LinearLayout
      style="@style/Layouts_Vertical"
      android:layout_weight="2">
      <ImageView
          android:id="@+id/imageLogin"
          android:layout_width="200dp"
          android:layout_height="200dp"
          android:layout_margin="16dp"
          android:src="@drawable/icon_trivialist"
          android:contentDescription="@string/image_logo"
          android:scaleType="centerCrop" />
      <EditText
          android:id="@+id/emailLog"
          style="@style/EditText_Standard"
          android:autofillHints="emailAddress"
          android:hint="@string/email"
          android:inputType="textEmailAddress" />
      <EditText
          android:id="@+id/passwordLog"
          style="@style/EditText_Standard"
          android:hint="@string/password"
          android:importantForAutofill="no"
          android:inputType="textPassword" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
      <com.google.android.material.button.MaterialButton
          android:id="@+id/cancelLogin"
          style="@style/buttonCancel"
          android:layout_width="160dp"
          android:layout_height="wrap_content"
          android:text="@string/cancel"/>
      <com.google.android.material.button.MaterialButton
          android:id="@+id/enterLogin"
          style="@style/buttonConfirm"
          android:layout_width="160dp"
          android:layout_height="wrap_content"
          android:text="@string/enter"/>


    </LinearLayout>
  </LinearLayout>

</layout>
