<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".LobbyActivity"
        android:background="@drawable/background1">
        <ImageView
            android:id="@+id/imageLobby"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:src="@drawable/icon_trivialist"
            android:contentDescription="@string/image_logo"
            android:scaleType="centerCrop"/>
        <ImageView
            android:id="@+id/imageDados"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:src="@drawable/dados"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPlay"
                style="@style/buttonConfirm"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:text="@string/play"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonHelp"
                style="@style/buttonConfirm"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:text="@string/help"/>


        </LinearLayout>

    </LinearLayout>

</layout>