<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="@drawable/background1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageInit"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:src="@drawable/icon_trivialist"
                android:contentDescription="@string/image_logo"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:gravity="center"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logInButton"
                    style="@style/Button_Standard"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:text="@string/init"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerButton"
                    style="@style/Button_Standard"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:text="@string/register"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>
